demo-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: demo
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30500
