demo-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: kalem-ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello.murataksu.net
      secretName: hello-app-tls
  rules:
    - host: hello.murataksu.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app
                port:
                  number: 80
